Scrolling fix for overflowing headers

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -8,4 +8,6 @@
 
 body {
   background-color: $color-background;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
